# CSC

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt
data/: config.yml
include/: DBinterface.hpp  bbSet.hpp  boundingBox.hpp  checks.hpp  config.hpp  global.hpp  metrics.hpp  point.hpp  pointSet.hpp  runs.hpp
include/algorithms/: 2d.hpp  algorithms.hpp  approx.hpp  bk.hpp  cs.hpp  maxCliqueEnum.hpp  maximalBrute.hpp  partitioning.hpp  tsukiyama.hpp
scripts/: clear_stats.sh
src/: CMakeLists.txt  a.out  main.cpp  tsukiyama_prototype.cpp
