cmake_minimum_required(VERSION 3.5)
project(comp_sky)
set(CMAKE_CXX_STANDARD 14)

FIND_PACKAGE( Boost 1.78 COMPONENTS filesystem REQUIRED )
FIND_PACKAGE(OpenMP)
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
add_subdirectory(thirdparty/SQLiteCpp)
include_directories(thirdparty/RTree)
add_subdirectory(thirdparty/yaml-cpp)
include_directories(src)
include_directories(include)
set(CMAKE_CXX_FLAGS_DEBUG_INIT "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG")
add_subdirectory(src)