set(BINARY ${CMAKE_PROJECT_NAME})
#file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true *.hpp *.cpp)
#set(SOURCES ${SOURCES})
add_executable(${BINARY}_debug main.cpp)
add_executable(${BINARY}_test main.cpp)
target_link_libraries(${BINARY}_debug SQLiteCpp sqlite3 pthread dl yaml-cpp OpenMP::OpenMP_CXX ${Boost_LIBRARIES})
target_link_libraries(${BINARY}_test SQLiteCpp sqlite3 pthread dl yaml-cpp OpenMP::OpenMP_CXX ${Boost_LIBRARIES})
target_compile_definitions(${BINARY}_debug PRIVATE DEBUG)
# target_link_libraries(${BINARY}_time SQLiteCpp sqlite3 pthread dl)
